# physLP

./: README.md  pyproject.toml
.ai/: structure.md
.opencode/instructions/: docstrings.md  structure.md
docs/handwritten/: library_basics.rst  license.rst  simple_example.rst
docs/source/: beginner_guide.rst  concepts.rst  conf.py  features.rst  index.rst  install.rst  modules.rst  quicky.rst  reference_guide.rst  routines.rst  scripts.rst  tutorials.rst  user_guide.rst  what_is.rst
src/physlp/: __init__.py
